--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "display": "standalone",
     "scope": "/",
     "start_url": "",
-    "description": "Blog and Resume for Christine Dodrill",
+    "description": "Anothewr Todo List for people who forgot stuff",
     "orientation": "any",
     "icons": [
         {
