--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "background_color": "#1c1c1c",
     "display": "standalone",
     "scope": "/",
-    "start_url": "/index.html",
+    "start_url": "/frontend1-project/index.html",
     "description": "Organize your chaos with Nah Later, the ultimate to-do list app!",
     "lang": "en-US",
     "orientation": "any",
