--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "orientation": "any",
     "icons": [
         {
-            "src": "./images/favicon.png",
+            "src": "./images/favicon.ico",
             "sizes": "512x512",
             "type": "image/png"
         }
